test/log/load/vgldcb1_v_i64.txt
vgldcb1_v_i64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vgldcb1_v_i64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vgldcb1_v_i64.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vgldcb1_v_i64.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vgldcb1_v_i64.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vgldcb1_v_i64.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vgldcb1_v_i64.c:29:6: warning: no previous prototype for 'vgldcb1_v_i64_golden' [-Wmissing-prototypes]
   29 | void vgldcb1_v_i64_golden(int64_t *base,int64_t index,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vgldcb1_v_i64.c: In function 'vgldcb1_v_i64_golden':
vgldcb1_v_i64.c:33:31: error: subscripted value is neither array nor pointer nor vector
   33 |                  exp_result[i][j*GROUP_DEPTH/ELE_WIDTH+k] = base[i*COMBO_STRIDE/ELE_WIDTH+ j*GROUP_STRIDE/ELE_WIDTH + k*ELE_STRIDE/ELE_WIDTH];
      |                               ^
vgldcb1_v_i64.c:29:49: warning: unused parameter 'index' [-Wunused-parameter]
   29 | void vgldcb1_v_i64_golden(int64_t *base,int64_t index,int64_t *exp_result) {
      |                                         ~~~~~~~~^~~~~
vgldcb1_v_i64.c: In function 'main':
vgldcb1_v_i64.c:60:35: warning: passing argument 2 of 'vgldcb1_v_i64_golden' makes integer from pointer without a cast [-Wint-conversion]
   60 |     vgldcb1_v_i64_golden(exp_base,exp_index,exp_result);
      |                                   ^~~~~~~~~
      |                                   |
      |                                   int64_t * {aka long long int *}
vgldcb1_v_i64.c:29:49: note: expected 'int64_t' {aka 'long long int'} but argument is of type 'int64_t *' {aka 'long long int *'}
   29 | void vgldcb1_v_i64_golden(int64_t *base,int64_t index,int64_t *exp_result) {
      |                                         ~~~~~~~~^~~~~
vgldcb1_v_i64.c:68:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   68 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vgldcb1_v_i64.c:68:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   68 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb1_v_i64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vgldcb1_v_i64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vgldcb1_v_i64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vgldcb1_v_i64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed